app-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etax
  labels:
    app: etax
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etax
  template:
    metadata:
      labels:
        app: etax
    spec:
      containers:
      - name: etax
        image: docker.pkg.github.com/missprempree/etax-api/etax-api-img:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 9005
