app-deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: etax-service
spec:
  selector:
    app: etax
  ports:
    - port: 9005
      targetPort: 9005
