app-deployment/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: etax
spec:
  to:
    kind: Service
    name: etax-service
  port:
    targetPort: 9005
  wildcardPolicy: None
